--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "diploma.edu.zp.guide_my_own"
         minSdkVersion 21
@@ -35,8 +35,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:percent:25.1.0'
     testCompile 'junit:junit:4.12'
     compile 'com.kaopiz:kprogresshud:1.0.5'
+    compile 'com.afollestad:material-camera:0.4.4'
+    compile 'commons-io:commons-io:2.5'
 
     compile 'com.google.android.gms:play-services-location:9.8.0'
     compile 'com.google.android.gms:play-services-maps:9.8.0'
