--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
         </activity>
 
         <activity
+            android:name=".activity.MapActivity" android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
             android:name="com.afollestad.materialcamera.CaptureActivity"
             android:theme="@style/MaterialCamera.CaptureActivity" />
         <activity
