--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+   <!-- <uses-feature android:name="android.hardware.camera2.full" />-->
 
     <uses-permission android:name="diploma.edu.zp.guide_my_own.permission.MAPS_RECEIVE"/>
     <permission android:name="diploma.edu.zp.guide_my_own.permission.MAPS_RECEIVE" android:protectionLevel="signature"/>
