--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.0"
     defaultConfig {
         applicationId "diploma.edu.zp.guide_my_own"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -28,28 +29,32 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    //noinspection GradleCompatible
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:percent:25.3.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.kaopiz:kprogresshud:1.0.5'
-    compile 'com.afollestad:material-camera:0.4.4'
-    compile 'commons-io:commons-io:2.5'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.3.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
 
-    compile 'com.google.android.gms:play-services-location:10.2.1'
-    compile 'com.google.android.gms:play-services-maps:10.2.1'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-}
+        implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
+        implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-apply plugin: 'com.google.gms.google-services'
+        compile fileTree(include: ['*.jar'], dir: 'libs')
+        androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+            exclude group: 'com.android.support', module: 'support-annotations'
+        })
+        compile 'com.android.support:appcompat-v7:27.1.0'
+        compile 'com.android.support:support-v4:27.1.0'
+        compile 'com.android.support:design:27.1.0'
+        compile 'com.android.support:percent:27.1.0'
+        testCompile 'junit:junit:4.12'
+        compile 'com.kaopiz:kprogresshud:1.0.5'
+        compile 'com.afollestad:material-camera:0.4.4'
+        compile 'commons-io:commons-io:2.5'
+        compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+        compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
+        compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+        compile 'com.squareup.okhttp3:okhttp:3.3.0'
+        compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
+        compile 'com.google.android.gms:play-services-location:11.8.0'
+        compile 'com.google.android.gms:play-services-maps:11.8.0'
+        compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+        compile 'com.android.support:cardview-v7:27.1.0'
+        compile 'com.android.support:support-v13:27.1.0'
+    }
+
+    apply plugin: 'com.google.gms.google-services'
