--- a/build.gradle
+++ b/build.gradle
@@ -3,23 +3,32 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.google.gms:google-services:3.0.0'
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
 
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+
 allprojects {
     repositories {
         jcenter()
         maven { url "https://dl.bintray.com/drummer-aidan/maven" }
+        google()
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
