--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
+
 
 android {
     compileOptions {
@@ -30,31 +34,34 @@ android {
 
 dependencies {
 
-        implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
-        implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-        compile fileTree(include: ['*.jar'], dir: 'libs')
-        androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-            exclude group: 'com.android.support', module: 'support-annotations'
-        })
-        compile 'com.android.support:appcompat-v7:27.1.0'
-        compile 'com.android.support:support-v4:27.1.0'
-        compile 'com.android.support:design:27.1.0'
-        compile 'com.android.support:percent:27.1.0'
-        testCompile 'junit:junit:4.12'
-        compile 'com.kaopiz:kprogresshud:1.0.5'
-        compile 'com.afollestad:material-camera:0.4.4'
-        compile 'commons-io:commons-io:2.5'
-        compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-        compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
-        compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-        compile 'com.squareup.okhttp3:okhttp:3.3.0'
-        compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
-        compile 'com.google.android.gms:play-services-location:11.8.0'
-        compile 'com.google.android.gms:play-services-maps:11.8.0'
-        compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-        compile 'com.android.support:cardview-v7:27.1.0'
-        compile 'com.android.support:support-v13:27.1.0'
-    }
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    //noinspection GradleCompatible
+    compile 'com.android.support:appcompat-v7:27.1.0'
+    compile 'com.android.support:support-v4:27.1.0'
+    compile 'com.android.support:design:27.1.0'
+    compile 'com.android.support:percent:27.1.0'
+    testCompile 'junit:junit:4.12'
+    compile 'com.kaopiz:kprogresshud:1.0.5'
+    compile 'com.afollestad:material-camera:0.4.4'
+    compile 'commons-io:commons-io:2.5'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.okhttp3:okhttp:3.3.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
+    compile 'com.google.android.gms:play-services-location:11.8.0'
+    compile 'com.google.android.gms:play-services-maps:11.8.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.android.support:cardview-v7:27.1.0'
+    compile 'com.android.support:support-v13:27.1.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.android.support:support-annotations:27.1.0'
+}
 
-    apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
