--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,11 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        google()
     }
     dependencies {
         classpath 'com.google.gms:google-services:3.0.0'
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.0'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
 
 
