--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId "diploma.edu.zp.guide_my_own"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 7
+        versionName "2.0.4"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -40,48 +40,57 @@ android {
 }
 
 
-android {
+/*android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+}*/
+android {
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
-
 dependencies {
 
     implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //noinspection GradleCompatible
-    compile 'com.android.support:appcompat-v7:27.1.0'
-    compile 'com.android.support:support-v4:27.1.0'
-    compile 'com.android.support:design:27.1.0'
-    compile 'com.android.support:percent:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:percent:27.1.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.kaopiz:kprogresshud:1.0.5'
-    compile 'com.afollestad:material-camera:0.4.4'
-    compile 'commons-io:commons-io:2.5'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.3.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
-    compile 'com.google.android.gms:play-services-location:11.8.0'
-    compile 'com.google.android.gms:play-services-maps:11.8.0'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile 'com.android.support:cardview-v7:27.1.0'
-    compile 'com.android.support:support-v13:27.1.0'
-    compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.android.support:support-annotations:27.1.0'
-    compile('com.crashlytics.sdk.android:crashlytics:2.9.3@aar') {
-        transitive = true;
+    implementation 'com.kaopiz:kprogresshud:1.0.5'
+    implementation 'com.afollestad:material-camera:0.4.4'
+    implementation 'commons-io:commons-io:2.5'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    implementation 'com.jakewharton.rxbinding:rxbinding:1.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.3.0'
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.android.support:support-v13:27.1.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.android.support:support-annotations:27.1.0'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.3@aar') {
+        transitive = true
     }
     compile('com.crashlytics.sdk.android:answers:1.4.2@aar') {
-        transitive = true;
+        transitive = true
     }
 }
 
